--- a/include/hoj.css
+++ b/include/hoj.css
@@ -50,7 +50,7 @@ h2 {
 }
 body {
     background-color: #FFFFFF;
-    background-image: url("../image/background.jpg");
+    /*background-image: url("../image/background.jpg");*/
     font-size:24px;
     line-height:48px;
 }
